--- a/DateFinder/ClientApp/src/components/DateView.css
+++ b/DateFinder/ClientApp/src/components/DateView.css
@@ -100,10 +100,11 @@
 	flex-direction: column;
 	align-items: center;
 	width: 60px;
-	margin: 0 18px;
+	margin: 0 auto;
 }
 
 .dateGrid {
 	display: flex;
 	overflow: scroll;
+	align-items: flex-end;
 }
