--- a/DateFinder/ClientApp/src/custom.css
+++ b/DateFinder/ClientApp/src/custom.css
@@ -51,3 +51,26 @@ input[type='text'] {
 	width: 80%;
 	margin-top: 48px;
 }
+
+@media (max-width: 740px) {
+	.resultsAndSubmit {
+		align-items: initial;
+		flex-direction: column;
+	}
+}
+
+@media (max-width: 480px) {
+	.main {
+		margin: 16px;
+	}
+
+	.titleHeading {
+		margin: 16px 0;
+	}
+
+	input[type='text'] {
+		width: 100%;
+		margin-left: 0;
+		margin-right: 0;
+	}
+}
