--- a/DateFinder/ClientApp/src/components/DateView.css
+++ b/DateFinder/ClientApp/src/components/DateView.css
@@ -38,6 +38,9 @@
 	height: 60px;
 	border-radius: 30px;
 	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
+}
+
+.stackedCircle {
 	margin-top: -20px;
 }
 
@@ -133,7 +136,7 @@
 		padding: 8px 0;
 	}
 
-	.nameCircle {
+	.stackedCircle {
 		margin-top: 0;
 		margin-left: -20px;
 	}
