--- a/DateFinder/ClientApp/src/components/NewPoll.css
+++ b/DateFinder/ClientApp/src/components/NewPoll.css
@@ -34,11 +34,15 @@ label {
 	grid-column: 1;
 }
 
-.calendar {
-	background-color: red;
-	width: 100%;
-	height: 300px;
+.DayPicker {
+	width: 300px;
 	grid-column: 2;
+	justify-self: center;
+}
+
+.DayPicker-Day {
+	width: 50px;
+	height: 40px;
 }
 
 .submitButton {
@@ -68,7 +72,7 @@ label {
 
 	#chooseDaysTitle,
 	#chooseDaysCounter,
-	.calendar,
+	.DayPicker,
 	.submitButton {
 		grid-column: 1;
 	}
