--- a/DateFinder/ClientApp/src/components/NewPoll.css
+++ b/DateFinder/ClientApp/src/components/NewPoll.css
@@ -51,6 +51,20 @@ label {
 	justify-self: end;
 }
 
+.dialogText {
+	margin: 24px 0;
+}
+
+.pollLink {
+	font-family: 'HelveticaNeue-Bold';
+	font-size: 32px;
+	color: #129f00;
+}
+
+.pollLink:hover {
+	cursor: grab;
+}
+
 @media (max-width: 680px) {
 	.formFields {
 		grid-template-columns: 1fr;
@@ -84,5 +98,10 @@ label {
 	.submitButton {
 		grid-row: 4;
 		justify-self: center;
+	}
+
+	.pollLink {
+		margin-top: 16px;
+		font-size: 16px;
 	}
 }
