--- a/DateFinder/ClientApp/src/components/ParticipantList.module.css
+++ b/DateFinder/ClientApp/src/components/ParticipantList.module.css
@@ -29,3 +29,11 @@
 	font-family: 'HelveticaNeue-Bold';
 	font-size: 24px;
 }
+
+.submitAndAbort {
+	display: grid;
+	min-width: 136px;
+	grid-template-columns: 60px 60px;
+	column-gap: 16px;
+	justify-content: space-around;
+}
