--- a/DateFinder/ClientApp/src/pages/NewPoll.module.css
+++ b/DateFinder/ClientApp/src/pages/NewPoll.module.css
@@ -40,11 +40,6 @@ label {
 	justify-self: center;
 }
 
-.DayPicker-Day {
-	width: 50px;
-	height: 40px;
-}
-
 .dialogText {
 	margin: 24px 0;
 }
@@ -80,8 +75,7 @@ label {
 
 	#chooseDaysTitle,
 	#chooseDaysCounter,
-	.DayPicker,
-	.submitButton {
+	.DayPicker {
 		grid-column: 1;
 	}
 
@@ -92,5 +86,9 @@ label {
 	.pollLink {
 		margin-top: 16px;
 		font-size: 16px;
+	}
+
+	#submitButton {
+		justify-self: center;
 	}
 }
