Move media queries from DateGrid to their respective modules

--- a/DateFinder/ClientApp/src/components/NameCircle.module.css
+++ b/DateFinder/ClientApp/src/components/NameCircle.module.css
@@ -19,3 +19,10 @@
 .maybe {
 	background-color: #ef9c00;
 }
+
+@media (max-width: 740px) {
+	.stackedCircle {
+		margin-top: 0;
+		margin-left: -20px;
+	}
+}
