--- a/DateFinder/ClientApp/src/pages/Poll.module.css
+++ b/DateFinder/ClientApp/src/pages/Poll.module.css
@@ -13,7 +13,8 @@
 #participantHeading {
 	margin: 16px 0;
 	text-align: left;
-	font-family: 'HelveticaNeue-Bold';
+	font-family: 'Helvetica Neue', 'Roboto', sans-serif;
+	font-weight: 700;
 	font-size: 28px;
 }
 
