--- a/DateFinder/ClientApp/src/components/ParticipantList.module.css
+++ b/DateFinder/ClientApp/src/components/ParticipantList.module.css
@@ -10,7 +10,8 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	font-family: 'HelveticaNeue-Bold';
+	font-family: 'Helvetica Neue', 'Roboto', sans-serif;
+	font-weight: 700;
 	font-size: 26px;
 	background-color: #f5f5f5;
 	min-width: 60px;
@@ -26,7 +27,8 @@
 }
 
 .participantName {
-	font-family: 'HelveticaNeue-Bold';
+	font-family: 'Helvetica Neue', 'Roboto', sans-serif;
+	font-weight: 700;
 	font-size: 24px;
 }
 
