--- a/When/ClientApp/src/components/ToggleButton.module.css
+++ b/When/ClientApp/src/components/ToggleButton.module.css
@@ -18,7 +18,15 @@
 }
 
 .toggleButton.no {
-	background-color: #ef0000;
+	border: 2px solid #afafaf;
+	background: none;
+	box-shadow: none;
+}
+
+.toggleButton.no:hover {
+	border: none;
+	background-color: #129f00;
+	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
 }
 
 @media (max-width: 740px) {
