--- a/When/ClientApp/src/pages/Poll.module.css
+++ b/When/ClientApp/src/pages/Poll.module.css
@@ -10,6 +10,12 @@
 	column-gap: 16px;
 }
 
+.spinner {
+	display: flex;
+	justify-content: center;
+	margin: 100px;
+}
+
 #participantHeading {
 	margin: 16px 0;
 	text-align: left;
