--- a/When/ClientApp/src/pages/Home.module.css
+++ b/When/ClientApp/src/pages/Home.module.css
@@ -5,12 +5,18 @@
 }
 
 .heroDesktop {
+	max-width: 70%;
+	max-height: 100%;
 	height: 100%;
+	width: 100%;
 	margin: 0 16px;
 }
 
 .heroMobile {
-	height: 83%;
+	width: 100%;
+	height: 100%;
+	max-height: 100%;
+	max-width: 21%;
 	margin: 0 16px;
 }
 
@@ -43,6 +49,10 @@
 @media (max-width: 768px) {
 	.heroDesktop {
 		display: none;
+	}
+
+	.heroMobile {
+		max-width: 80%;
 	}
 
 	.newPollButton {
